2007-06-25  Marc Singer  <elf@cerise.buici.com>

	* usr/apex-env.cc: Added release and region commands for probing
	the APEX environment.

	* src/apex/env.c: Added prefix option to the startup command.
	Removed crufty old ENV_STARTUP option that was mach specific.

2007-06-03  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/apex.lds.S: Renamed some of the sections to
	make the meanings clear.  Preemtively fixed a vulnerability to
	section reordering.  Fixed the setting of fSDRAMBoot so that it
	works for INLINE init mode and for the older form.

	* src/mach-ixp42x/initialize.c (bootstrap_sdram_pre): Revamped the
	initialization code for ixp42x to use inline mode.  Took the
	opportunity to elide a lot of cruft from the routines.  It isn't
	yet tested as written to flash as this requires setup of one of
	the wigglers.  None of the typical uses of APEX on the ixp42x
	install APEX as the primary boot loader, so this can wait.

	* src/arch-arm/Kconfig: Configuration option to override the
	default SDRAM execution detection code.  Most platforms can use
	the execution address to detect whether or not APEX is running in
	SDRAM.  Some, like the ixp42x map flash over SDRAM, so we have to
	use a custom piece of code to detect this circumstance.
  
2007-06-03  Marc Singer  <elf@buici.com>

	* src/arch-arm/Kconfig: Added AEABI configuration option so that
	we can link APEX with an AEABI toolchain.  Really, the only
	difference is the inclusion of a couple of math functions.

	* src/arch-arm/lib/lib1funcs.S: Added config.h to build of
	lib1funcs so that the configuration dependencies are checked.

2007-06-02  Marc Singer  <elf@buici.com>

	* Makefile (SUBLEVEL): 1.5.6: Releasing version with fix section
	ordering.

2007-06-01  Marc Singer  <elf@cerise.buici.com>

	* src/arch-arm/entry/reset.c: Fixed a problem in the ordering of
	the reset sections that was illuminated by rwhitby's default
	compiler.

2007-06-01  Marc Singer  <elf@zealous.synapsedev.com>
